--- a/config/params_live.yaml
+++ b/config/params_live.yaml
@@ -16,7 +16,9 @@ idmp_world_frame: "base_link"
 # idmp_pcl_topic: "/camera/depth/color/points_crop"
 # idmp_pcl_topic: "/zed2i/zed_node/point_cloud/cloud_registered"
 idmp_pcl_topic: "/points_filt"
-idmp_caminfo_topic: "/depth/camera_info"
+idmp_caminfo_topic: 
+  - ["/zed2i/zed_node/depth/camera_info", "zed2i_left_camera_optical_frame"]
+  # - ["/camera_2/depth/camera_info", "camera_2_depth_optical_frame"]
 idmp_dynamic: True
 idmp_fusion: False
 
