--- a/config/params_live.yaml
+++ b/config/params_live.yaml
@@ -1,7 +1,7 @@
 idmp_rleng: 1.8
-idmp_tree_hl_min: 0.025
+idmp_tree_hl_min: 0.05
 idmp_tree_hl_max: 3.2
-idmp_tree_hl_clust: 0.05
+idmp_tree_hl_clust: 0.1
 idmp_tree_hl_init: 1.6
 idmp_map_scale: 1024
 idmp_obs_skip: 10
@@ -13,15 +13,14 @@ idmp_pub_pcl: True
 idmp_depth_topic: "/camera_1/depth/image_raw"
 idmp_dual_depth_topic: ""
 idmp_world_frame: "base_link"
-# idmp_pcl_topic: "/camera/depth/color/points_crop"
-# idmp_pcl_topic: "/zed2i/zed_node/point_cloud/cloud_registered"
 idmp_pcl_topic: "/points_filt"
 idmp_caminfo_topic: 
-  - ["/zed2i/zed_node/depth/camera_info", "zed2i_left_camera_optical_frame"]
+  - ["/rgb/camera_info", "depth_camera_link"]
+  # - ["/zed2i/zed_node/depth/camera_info", "zed2i_left_camera_optical_frame"]
   # - ["/camera_2/depth/camera_info", "camera_2_depth_optical_frame"]
 idmp_dynamic: True
 idmp_fusion: False
 
-idmp_dyn_tresh: 0.08
+idmp_dyn_tresh: 0.005
 idmp_fus_min: 0.0005
-idmp_fus_max: 0.01
+idmp_fus_max: 0.005
