Add stuff for paper eval

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,5 +112,6 @@ catkin_install_python(PROGRAMS tools/queryTool.py
                         tools/eval/evalTest.py
                         tools/calibPose.py
                         tools/robotProximityViz.py
+                        tools/eval/cowCamInfoPub.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
