--- a/config/params_ball.yaml
+++ b/config/params_ball.yaml
@@ -7,13 +7,11 @@ idmp_map_scale: 225
 idmp_obs_skip: 10
 idmp_filt_outl: False
 
-idmp_depth_input: False
-idmp_dual_cam: False
 idmp_pub_pcl: True
-idmp_depth_topic: "/camera_1/depth/image_raw"
-idmp_dual_depth_topic: ""
-idmp_pcl_topic: "/camera_2/depth/color/points"
 idmp_world_frame: "world"
+idmp_pcl_topic: "/camera_2/depth/color/points"
+idmp_caminfo_topic:
+  - ["/camera_2/depth/camera_info", "camera_2_depth_optical_frame"]
 idmp_dynamic: True
 idmp_fusion: False
 
