--- a/config/params_cow.yaml
+++ b/config/params_cow.yaml
@@ -1,20 +1,16 @@
 idmp_rleng: 1.8
-idmp_tree_hl_min: 0.025
+idmp_tree_hl_min: 0.05
 idmp_tree_hl_max: 6.4
-idmp_tree_hl_clust: 0.05
+idmp_tree_hl_clust: 0.1
 idmp_tree_hl_init: 3.2
-idmp_map_scale: 1024
-idmp_obs_skip: 10
+idmp_map_scale: 400
 idmp_filt_outl: True
 
-idmp_depth_input: False
-idmp_dual_cam: False
-idmp_pub_pcl: False
-idmp_depth_topic: "/camera_1/depth/image_raw"
-idmp_dual_depth_topic: ""
-# idmp_pcl_topic: "/camera_2/depth/color/points"
-# idmp_world_frame: "base_link"
-idmp_pcl_topic: "/camera/depth_registered/points"
+idmp_pub_pcl: True
+idmp_world_frame: "base_link"
+idmp_pcl_topic: "points_filt"
+idmp_caminfo_topic:
+  - ["/camera/depth_registered/camera_info", "camera_rgb_optical_frame"]
 idmp_dynamic: False
 idmp_fusion: True
 
